apps/open-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: lab
  labels:
    app: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      strategy:
        type: Recreate
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:main
        ports:
          - name: http
            containerPort: 8080
        volumeMounts:
          - mountPath: /app/backend/data
            name: data
        resources:
          requests:
            cpu: 150m
            memory: 1Gi
          limits:
            cpu: 200m
            memory: 1.5Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: open-webui
