apps/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: lab
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: http 
  selector:
    app: open-webui
