apps/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  namespace: lab
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-cloudflare"
spec:
  ingressClassName: nginx
  rules:
  - host: ai.vbalex.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: open-webui
              port:
                name: http
  tls: 
  - hosts:
    - ai.vbalex.com
    secretName: tls-com-vbalex-ai
